--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -1,26 +1,41 @@
 /*  
 
 --- 01 TYPOGRAPHY SYSTEM ---
-- FONT SIZES (px)
+
+- Font sizes (px)
 2 / 4 / 8 / 12 / 16 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
 - SPACING SYSTEM (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+-Fone weights
+Default: 400
+Medium: 500
+Semi-bold: 600
+Bold: 700
+
 - LINE HEIGHT
 Default: 1
-
+1.05
+1.06
 
 
 --- 02 COLORS ---
 - primary: #e67e22
-- Tints: #fdf2e9, #cf711f
-- Shades: 
+- Tints: #fdf2e9, 
+- Shades: #cf711f
 - Accents:
 - Greys: #555, #333;
 
 
 --- 05 SHADOWS
 
---- BORDER RADIUS
+--- 06 BORDER RADIUS
+
+Default: 9px
+
+
+--- 07 WHITESPACE
 
 */
 
@@ -122,6 +137,45 @@ body {
 }
 
 /************************************/
+/* NAVIGATION */
+/************************************/
+.main-nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 3.2rem;
+}
+
+/* Link styles */
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+  text-decoration: none;
+  color: #333;
+  font-weight: 600;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #b8651b;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #b8651b;
+}
+
+/************************************/
 /* HERO SECTION */
 /************************************/
 .section-hero {
@@ -142,6 +196,7 @@ body {
 .hero-description {
   font-size: 2rem;
   line-height: 1.6;
+  font-weight: 600;
   margin-bottom: 4.8rem;
 }
 
