--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -65,6 +65,25 @@ body {
 /************************************/
 /* GENERAL COMPONENTS */
 /************************************/
+.container {
+  /* 1140px */
+  max-width: 120rem;
+  margin: 0 auto;
+  padding: 0 3.2rem;
+}
+
+.grid {
+  display: grid;
+  gap: 9.6rem;
+}
+
+.grid--2-cols {
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.grid--4-cols {
+  grid-template-columns: repeat(4, 1fr);
+}
 
 .heading-primary {
   font-size: 5.2rem;
@@ -119,7 +138,7 @@ body {
 }
 
 /************************************/
-/* HEADER */
+/* Header */
 /************************************/
 .header {
   display: flex;
@@ -243,43 +262,8 @@ body {
 
 .section-how {
   padding: 9.6rem 0;
-  background-color: orangered;
 }
 
-.container {
-  /* 1140px */
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--4-cols {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.section-how div {
-  padding: 100px;
-  font-size: 50px;
-}
-
-.section-how div:nth-child(1) {
-  background-color: aqua;
-}
-.section-how div:nth-child(2) {
-  background-color: blue;
-}
-.section-how div:nth-child(3) {
-  background-color: violet;
-}
-.section-how div:nth-child(4) {
-  background-color: yellow;
+.step-img {
+  width: 50%;
 }
