--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -1,142 +1,3 @@
-/*   
-
---- 01 TYPOGRAPHY SYSTEM ---
-
-- Font sizes (px)
-2 / 4 / 8 / 12 / 16 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-- SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
--Fone weights
-Default: 400
-Medium: 500
-Semi-bold: 600
-Bold: 700
-
-- LINE HEIGHT
-Default: 1
-1.05
-1.06
-
-
---- 02 COLORS ---
-- primary: #e67e22
-- Tints: #fdf2e9, 
-- Shades: #cf711f
-- Accents:
-- Greys: #555, #333;
-
-
---- 05 SHADOWS
-
---- 06 BORDER RADIUS
-
-Default: 9px
-
-
---- 07 WHITESPACE
-
-*/
-
-/* Universal reset */
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-/* HTML font-size set to 10 px to utilize rem */
-html {
-  /* Call google font family */
-  font-family: "Rubik", sans-serif;
-  font-size: 10px;
-  /* universal font size of user browser setting */
-  font-size: 62.5%;
-}
-
-body {
-  font-family: sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-/************************************/
-/* GENERAL COMPONENTS */
-/************************************/
-.container {
-  /* 1140px */
-  max-width: 120rem;
-  margin: 0 auto;
-  padding: 0 3.2rem;
-}
-
-.grid {
-  display: grid;
-  gap: 9.6rem;
-}
-
-.grid--2-cols {
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid--4-cols {
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-.btn:link,
-.btn:visited {
-  display: inline-block;
-
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-  text-decoration: none;
-
-  /* animation effect. Always put the transition in the original state */
-  transition: all 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #b8651b;
-  color: #fff;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  color: #c9c1bb;
-  /* trick to add border insid. Shadow inside the element */
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /************************************/
 /* Header */
 /************************************/
@@ -263,7 +124,61 @@ body {
 .section-how {
   padding: 9.6rem 0;
 }
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+/*** circle behind the iphone images */
+.step-img-box::before,
+.step-img-box::after {
+  content: "";
+  display: block;
+  width: 60%;
+  border-radius: 50%;
+
+  /* absolute positioning of the circle behind the iphones */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.step-img-box::before {
+  width: 60%;
+
+  /* 60% of the parent's width */
+  padding-bottom: 60%;
+  background-color: #fdf2e9;
+  /* /z-index\ positions an element on top, or on the bottom of another element. If the value is positive, it will be on top. If the value is negative, the image will be on the bottom. */
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+
+  /* 60% of the parent's width */
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+
+  /* /z-index\ positions an element on top, or on the bottom of another element. If the value is positive, it will be on top. If the value is negative, the image will be on the bottom. */
+  z-index: -1;
+}
 
 .step-img {
-  width: 50%;
+  width: 35%;
 }
