Added view port on the entire header
Tried adding a view port on the entire header but took it off.

--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -16,6 +16,10 @@
   height: 2rem;
 }
 
+/* .view-port {
+  height: 100vh;
+} */
+
 /************************************/
 /* NAVIGATION */
 /************************************/
