--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -1,5 +1,5 @@
 /************************************/
-/* Header */
+/* Header 
 /************************************/
 .header {
   display: flex;
@@ -21,7 +21,7 @@
 } */
 
 /************************************/
-/* NAVIGATION */
+/* NAVIGATION 
 /************************************/
 .main-nav-list {
   list-style: none;
