--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -86,9 +86,9 @@ body {
   grid-template-columns: repeat(2, 1fr);
 }
 
-.grid--4-cols {
+/* .grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
-}
+} */
 
 .grid--center-v {
   align-items: center;
