--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -122,6 +122,34 @@
 }
 
 /************************************/
+/*FEATURED IN SECTION */
+/************************************/
+
+.section-feaured {
+  padding: 4.8rem 0;
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75px;
+  font-weight: 500;
+  text-align: center;
+  margin: 2.4rem;
+}
+
+/* Flex container of the images */
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+/* Images */
+.logos img {
+  height: 3.2rem;
+}
+
+/************************************/
 /* HOW IT WORKS SECTION */
 /************************************/
 
