--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -136,6 +136,7 @@
   font-weight: 500;
   text-align: center;
   margin: 2.4rem;
+  color: #999;
 }
 
 /* Flex container of the images */
@@ -147,6 +148,9 @@
 /* Images */
 .logos img {
   height: 3.2rem;
+  /* Makes the images grey */
+  filter: brightness(0);
+  opacity: 50%;
 }
 
 /************************************/
@@ -213,4 +217,41 @@
 
 .step-img {
   width: 35%;
+}
+
+/************************************/
+/* MEALS SECTION */
+/************************************/
+
+.section-meals {
+  padding: 9.6rem 0;
+}
+
+.meal-title {
+  font-size: 2.4rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.meal-attribute {
+  font-size: 1.8rem;
+}
+
+.meal-img {
+  width: 100%;
+}
+
+.meal-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  color: #e67e22;
 }
