--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -37,7 +37,7 @@ Default: 1
 --- 06 BORDER RADIUS
 
 Default: 9px
-
+Medium: 11px
 
 --- 07 WHITESPACE
 
@@ -120,7 +120,7 @@ body {
   margin-bottom: 9.6rem;
 }
 .heading-tertiary {
-  font-size: 3.6rem;
+  font-size: 3.4rem;
   line-height: 1.2;
   margin-bottom: 3.2rem;
 }
@@ -173,6 +173,37 @@ body {
   box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+  color: #b8651b;
+  /* Hides the underline for the "see all recipe link when hovered. Transparent */
+  border-bottom: 1px solid transparent;
+}
+
+/* HELPER/SETTINGS CLASSES */
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+  text-align: center;
+}
+
+strong {
+  font-weight: 550;
 }
