Worked more on the testimonial section
added some photos of meals in the testimonial section. Added some grid, padding, and spacings.

--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -334,13 +334,18 @@
 /************************************/
 
 .section-testimonials {
-  padding: 9.6rem 0;
+  background-color: #fae5d3;
+}
+
+.testimonials-container {
+  padding: 9.6rem;
 }
 
 .testimonials {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 4.8rem;
+  column-gap: 8rem;
 }
 
 .testimonial-img {
@@ -358,4 +363,16 @@
 .testimonial-name {
   font-size: 1.6rem;
   color: #777;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.6rem;
+  padding: 1.6rem;
+}
+
+.gallery-item img {
+  display: block;
+  width: 100%;
 }
