Finished the pricing section
Completed the pricing card section. Started working on the features section below.

Added some background color on the highlighted pricing section card, and added an absolute positioned banner on top of the highlighted pricing seciton.

--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -29,7 +29,7 @@ Default: 1
 - Tints: #fdf2e9, #fae5d3
 - Shades: #cf711f
 - Accents:
-- Greys: #555, #333;
+- Greys: #555, #333, #6f6f6f(lightest grey allowed on #fdf2e9
 
 
 --- 05 SHADOWS
@@ -82,6 +82,10 @@ body {
   row-gap: 9.6rem;
 }
 
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
+}
+
 .grid--2-cols {
   grid-template-columns: repeat(2, 1fr);
 }
@@ -90,9 +94,9 @@ body {
   grid-template-columns: repeat(3, 1fr);
 }
 
-/* .grid--4-cols {
+.grid--4-cols {
   grid-template-columns: repeat(4, 1fr);
-} */
+}
 
 .grid--center-v {
   align-items: center;
@@ -190,8 +194,27 @@ body {
   border-bottom: 1px solid transparent;
 }
 
-/* HELPER/SETTINGS CLASSES */
+/* LIST CODES */
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
 
+.list--item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+.list-icon {
+  width: 30px;
+  height: 30px;
+  color: #e67e22;
+}
+
+/* HELPER/SETTINGS CLASSES */
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
