--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -230,7 +230,7 @@
 .meal {
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
   border-radius: 11px;
-  /* hides anything that overflows above  */
+  /* hides anything that overflows above */
   overflow: hidden;
 
   /* animation for the .meal:hover. */
@@ -310,31 +310,15 @@
   color: #e67e22;
 }
 
-.list {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  gap: 1.6rem;
-}
-
-.list--item {
-  font-size: 1.8rem;
-  display: flex;
-  align-items: center;
-  gap: 1.6rem;
-}
-.list-icon {
-  width: 30px;
-  height: 30px;
-  color: #e67e22;
-}
-
 /************************************/
 /* TESTIMONIALS SECTION */
 /************************************/
 
 .section-testimonials {
   background-color: #fae5d3;
+  display: grid;
+  grid-template-columns: 55fr 45fr;
+  align-items: center;
 }
 
 .testimonials-container {
@@ -346,6 +330,7 @@
   grid-template-columns: 1fr 1fr;
   gap: 4.8rem;
   column-gap: 8rem;
+  align-items: center;
 }
 
 .testimonial-img {
@@ -362,7 +347,7 @@
 
 .testimonial-name {
   font-size: 1.6rem;
-  color: #777;
+  color: #6f6f6f;
 }
 
 .gallery {
@@ -372,7 +357,95 @@
   padding: 1.6rem;
 }
 
+.gallery-item {
+  overflow: hidden;
+}
+
 .gallery-item img {
   display: block;
   width: 100%;
+  transition: all 0.7s;
+}
+
+.gallery-item img:hover {
+  /* This code will scale the image bigger when hovered. zoom effect. make sure to use "overflow: hidden" to have the effect of zooming in. */
+  transform: scale(1.1);
+}
+
+/************************************/
+/* PRICING CARDS SECTION */
+/************************************/
+
+.section-pricing {
+  padding: 9.6rem 0;
+}
+
+.pricing-plan {
+  border-radius: 11px;
+  width: 75%;
+}
+
+.pricing-plan--starter {
+  justify-self: end;
+  border: 0.3rem solid #fdf2e9;
+  border-radius: 11px;
+  padding: 4.99rem;
+}
+
+.pricing-plan--complete {
+  background-color: #fdf2e9;
+  padding: 4.8rem;
+  position: relative;
+  overflow: hidden;
+}
+
+.pricing-plan--complete::after {
+  content: "BEST VALUE!";
+  position: absolute;
+  top: 6%;
+  right: -10%;
+
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #333;
+  background-color: #fcc419;
+  padding: 0.8rem 3.2rem;
+  transform: rotate(45deg);
+}
+
+.plan-header {
+  text-align: center;
+  margin-bottom: 4.8rem;
+}
+.plan-name {
+  color: #cf711f;
+  font-weight: 600;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  margin-bottom: 3.2rem;
+}
+
+.plan-price {
+  font-size: 6.2rem;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1.6rem;
+}
+
+.plan-price span {
+  font-size: 3rem;
+  font-weight: 500;
+  margin-right: 0.8rem;
+}
+.plan-text {
+  font-size: 1.6rem;
+  line-height: 1.6;
+  color: #6f6f6f;
+}
+
+.plan-sign-up {
+  text-align: center;
+  margin-top: 4.8rem;
 }
