--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -26,13 +26,14 @@ Default: 1
 
 --- 02 COLORS ---
 - primary: #e67e22
-- Tints: #fdf2e9, #fae5d3
-- Shades: #cf711f
+- Tints: #fdf2e9, #fae5d3, #eb984e
+- Shades: #cf711f, #45260a
 - Accents:
 - Greys: #555, #333, #6f6f6f(lightest grey allowed on #fdf2e9
 
 
 --- 05 SHADOWS
+box-shadow: 0 3.2rem 6.4rem rgb(0, 0, 0, 0.06);
 
 --- 06 BORDER RADIUS
 
@@ -98,6 +99,10 @@ body {
   grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
+
 .grid--center-v {
   align-items: center;
 }
@@ -138,6 +143,7 @@ body {
   letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -146,9 +152,13 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 9px;
   text-decoration: none;
-
   /* animation effect. Always put the transition in the original state */
+
+  /* for cta button */
   transition: all 0.3s;
+  cursor: pointer;
+  border: none;
+  font-family: inherit;
 }
 
 .btn--full:link,
@@ -175,6 +185,18 @@ body {
   color: #c9c1bb;
   /* trick to add border insid. Shadow inside the element */
   box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+
+.btn--form:hover {
+  background-color: #fff;
+  color: #555;
 }
 
 .link:link,
@@ -212,6 +234,14 @@ body {
   width: 30px;
   height: 30px;
   color: #e67e22;
+}
+
+/* global focus state for when user presses tab */
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22; */
+  /* outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(206, 115, 36, 0.534);
 }
 
 /* HELPER/SETTINGS CLASSES */
