--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -29,7 +29,7 @@ Default: 1
 - Tints: #fdf2e9, #fae5d3, #eb984e
 - Shades: #cf711f, #45260a
 - Accents:
-- Greys: #555, #333, #6f6f6f(lightest grey allowed on #fdf2e9
+- Greys: #555, #333, #6f6f6f(lightest grey allowed on #fdf2e9), #767676
 
 
 --- 05 SHADOWS
