--- a/07-Omnifood-Desktop/css/queries.css
+++ b/07-Omnifood-Desktop/css/queries.css
@@ -25,6 +25,31 @@
   html {
     font-size: 56.25%;
   }
+
+  .grid {
+    column-gap: 4.8rem;
+    row-gap: 6.4rem;
+  }
+
+  .heading-primary {
+    font-size: 3.6rem;
+  }
+
+  .heading-tertiary {
+    font-size: 2.4rem;
+  }
+
+  .header {
+    padding: 0 3.2rem;
+  }
+
+  .hero {
+    gap: 4.8rem;
+  }
+
+  .main-nav-list {
+    gap: 3.2rem;
+  }
 }
 
 /* - Font sizes (px) 
