--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -59,6 +59,26 @@
   background-color: #b8651b;
 }
 
+/* MOBILE */
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+
+  display: none;
+}
+
+.icon-mobile-nav {
+  height: 4.8rem;
+  width: 4.8rem;
+  color: #6f6f6f;
+}
+
+/* you can select the name attribute by putting the name inside a pair of brackets [] */
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /************************************/
 /* HERO SECTION */
 /************************************/
