finished media query for mobile
Added a box for when the user click the menu option when in a mobile device to show the navigation tab. Added some animation for the navigation menu once its pressed by the user.

--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -58,6 +58,7 @@ html {
   font-size: 10px;
   /* universal font size of user browser setting */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -65,6 +66,9 @@ body {
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /* this only works if there is nothing absolutely positioned in relation to the body */
+  overflow-x: hidden;
 }
 
 /************************************/
