--- a/07-Omnifood-Desktop/css/queries.css
+++ b/07-Omnifood-Desktop/css/queries.css
@@ -119,5 +119,61 @@
     margin-top: 1.2rem;
   }
 }
+
+/* MOBILE NAVIGATION */
+
+.btn-mobile-nav {
+  display: block;
+}
+
+.main-nav {
+  background-color: rgba(255, 255, 255, 0.979);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  transform: translateX(100%);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s ease-out;
+
+  /* CORRECT WAY OF HIDING THE NAVIGATION */
+  /* 1.) HIde it visually */
+  opacity: 0;
+
+  /* 2.) Make it unaccessible to mouse, and keyboard */
+  pointer-events: none;
+
+  /* 3.) Hide it from screen readers */
+  visibility: hidden;
+}
+
+.nav-open .main-nav {
+  opacity: 1;
+  pointer-events: auto;
+  visibility: visible;
+  transform: translateX(0);
+}
+
+.nav-open .icon-mobile-nav[name="close-outline"] {
+  display: block;
+}
+
+.nav-open .icon-mobile-nav[name="menu-outline"] {
+  display: none;
+}
+
+.main-nav-list {
+  flex-direction: column;
+  gap: 4.8rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  font-size: 3rem;
+}
 /* - Font sizes (px) 
 2 / 4 / 8 / 12 / 16 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
