--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -10,6 +10,7 @@
   /* Becuase we want the header to be sticky later. FIXED HEIGHT */
   height: 9.6rem;
   padding: 0 4.8rem;
+  position: relative;
 }
 
 .logo {
@@ -59,7 +60,7 @@
   background-color: #b8651b;
 }
 
-/* MOBILE */
+/* MOBILE Query*/
 .btn-mobile-nav {
   border: none;
   background: none;
