Media query for 740px below
Worked on the diet section: center the diet section when the screen breaks below 740 px.

--- a/07-Omnifood-Desktop/css/queries.css
+++ b/07-Omnifood-Desktop/css/queries.css
@@ -120,7 +120,9 @@
   }
 }
 
-/* MOBILE NAVIGATION */
+/************************************/
+/*MOBILE NAV*/
+/************************************/
 
 .btn-mobile-nav {
   display: block;
@@ -175,5 +177,30 @@
 .main-nav-link:visited {
   font-size: 3rem;
 }
+
+/************************************/
+/* Below 740px (Smaller Tablets)*/
+/************************************/
+
+@media (max-width: 44em) {
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .diets {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+
+  .heading-secondary {
+    margin-bottom: 4.8rem;
+  }
+
+  .pricing-plan {
+    width: 100%;
+  }
+}
+
 /* - Font sizes (px) 
 2 / 4 / 8 / 12 / 16 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
