Worked on 740px smaller tablets
Changed the grid column for the footer to fit the footer in a 740px screen.

--- a/07-Omnifood-Desktop/css/queries.css
+++ b/07-Omnifood-Desktop/css/queries.css
@@ -200,6 +200,21 @@
   .pricing-plan {
     width: 100%;
   }
+
+  .grid--footer {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .logo-col,
+  .address-col {
+    grid-column: span 3;
+  }
+
+  .nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.2rem;
+  }
 }
 
 /* - Font sizes (px) 
