Smart Phone Media Query
changed the grid, section-hero, hero, button size, and hero-img to respond to a 544px media query.

--- a/07-Omnifood-Desktop/css/queries.css
+++ b/07-Omnifood-Desktop/css/queries.css
@@ -217,5 +217,51 @@
   }
 }
 
+/************************************/
+/* Below 544px (Smart phones)*/
+/************************************/
+
+/* smart phone query */
+@media (max-width: 38em) {
+  .grid {
+    row-gap: 4.8rem;
+  }
+
+  .grid--2-cols,
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: 1fr;
+  }
+
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+  }
+
+  .section-hero {
+    padding: 2.4rem 0 6.4rem 0;
+  }
+
+  .hero {
+    padding: 0 3.2rem;
+  }
+
+  .hero-img {
+    width: 80%;
+  }
+
+  .logos img {
+    height: 1.2rem;
+  }
+
+  .step-img-box:nth-child(2) {
+    grid-row: 1;
+  }
+
+  .step-img-box:nth-child(6) {
+    grid-row: 5;
+  }
+}
 /* - Font sizes (px) 
 2 / 4 / 8 / 12 / 16 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
