Implemented smooth scrolling
Added some smooth scrolling java script code so whenever a user clicks the links, it will take the user to where the link is linked to.

--- a/07-Omnifood-Desktop/css/general.css
+++ b/07-Omnifood-Desktop/css/general.css
@@ -59,6 +59,9 @@ html {
   /* universal font size of user browser setting */
   font-size: 62.5%;
   overflow-x: hidden;
+
+  /* does not work on safari or microsoft edge */
+  /* scroll-behavior: smooth; */
 }
 
 body {
