--- a/07-Omnifood-Desktop/css/style.css
+++ b/07-Omnifood-Desktop/css/style.css
@@ -81,7 +81,7 @@
 }
 
 /* STICKY NAVIGATION */
-.sticky {
+.sticky .header {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -92,6 +92,10 @@
   background-color: rgba(255, 255, 255, 0.979);
   z-index: 999;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
 }
 
 /************************************/
